# zentao-ai-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: 2_create_task.py  3_close_finished_task.py  4_auto_finish_tasks.py  first_plan_task.py
skills/zentao-task-planner/: .env.example
skills/zentao-task-planner/references/: plan-task.md
skills/zentao-task-planner/scripts/: zentao_common.py
tests/: test_zentao.py
zentao_ai_agent/: __init__.py
zentao_ai_agent/agent/: __init__.py  task_plan_agent.py
zentao_ai_agent/llm/: __init__.py  base.py  state.py  tools.py
zentao_ai_agent/utils/: __init__.py  config.py
zentao_ai_agent/zentao/: __init__.py  get_task_type.py  task_types.py  zendao_tool.py
